# discord_rusto

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: main.yml
src/: create.sql  main.rs
src/commands/: emojis.rs  generic.rs  listeners.rs  math.rs  mod.rs  stickers.rs  timer.rs
src/helpers/: messages.rs  mod.rs  pixiv.rs
src/listeners/: exhentai.rs  generic.rs  instagram.rs  misskey.rs  mod.rs  pixiv.rs  tiktok.rs  twitter.rs  vt_tiktok.rs
src/slash/: exchange.rs  mod.rs  toggle.rs
src/types/: exhentai.rs  mod.rs  pixiv.rs  settings.rs
