[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
regex = "1"
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "mysql", "chrono", "json"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
lazy_static = "1.4.0"
chrono-tz = "0.8.3"
anyhow = "1.0.72"
serde_json = "1.0.103"
itertools = "0.11.0"
html-escape = "0.2.13"
url = "2.4.0"
strum = "0.25.0"
strum_macros = "0.25.0"
chrono = "0.4.26"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "utils", "model", "cache"]
version = "0.11"
